# bm3d.torch

./: CMakeLists.txt  README.md  init.lua
lib/: CMakeLists.txt  bm3d.cpp  bm3d.h  bm3d2.cpp  main.cpp  utilities.cpp
rocks/: bm3d-scm-1.rockspec
test/: test.lua  test2.lua
